--- a/templates/novo_jogador.html
+++ b/templates/novo_jogador.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = 'container'> </div>
+    <div class = 'container'>
+    <h1> Adicionar novo jogador </h1>
+        <form action="{{url_for('novo_jogador')}}" method = 'POST'> 
+            <label for="nome">Nome:</label>
+            <input type="text" id='nome' name = 'nome' required> <br> <br>
+            <label for="idade">Idade:</label>
+            <input type="number" id='idade' name = 'idade' required> <br> <br>
+            <label for="posicao">Posição:</label>
+            <input type="text" id='posicao' name = 'posicao' required> <br> <br>
+            <input type = 'submit' value = 'Adicionar jogador' class = 'submit-btn'>
+        </form>
+    </div>
+
 </body>
 </html>
